--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Missão Prática - Nível 1 - Mundo 3/CadastroPOO/nbproject/private/
 /Missão Prática - Nível 1 - Mundo 3/CadastroPOO/build/
+/Missão Prática - Nível 3 - Mundo 3/CadastroBD/nbproject/private/
